<resources>
    <string name="app_name">APP</string>
    <!--BMI-->
    <string name="bmi">BMI</string>
    <string name="btn_cale">計算</string>
    <string name="weight">體重KG：</string>
    <string name="height">身高CM：</string>
    <!--計算機-->
    <string name="calculator">計算機</string>
    <string name="btn_delete">清除</string>
    <string name="btn_clear">歸零</string>
    <string name="btn_num1">1</string>
    <string name="btn_num2">2</string>
    <string name="btn_num3">3</string>
    <string name="btn_num4">4</string>
    <string name="btn_num5">5</string>
    <string name="btn_num6">6</string>
    <string name="btn_num7">7</string>
    <string name="btn_num8">8</string>
    <string name="btn_num9">9</string>
    <string name="btn_num0">0</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multi">*</string>
    <string name="btn_div">/</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <!--SQL-->
    <string name="btn_sql">資料庫</string>
    <string name="btn_Create">新增</string>
    <string name="btn_Modify">修改</string>
    <string name="tv_name">姓名：</string>
    <string name="tv_tel">電話：</string>
    <string name="tv_hobby">興趣：</string>
    <string name="tv_other">其他：</string>
    <string name="btn_Clear">清空顯示</string>
    <string name="name_hint">輸入姓名</string>
    <string name="tel_hint">輸入電話</string>
    <string name="hobby_hint">輸入興趣</string>
    <string name="other_hint">輸入其他相關</string>
</resources>