<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="6"
    tools:context=".Calculator">

    <EditText
        android:id="@+id/et_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_marginStart="4sp"
        android:gravity="start"
        android:layout_row="0"
        android:background="#eee"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_column="3"
        android:layout_row="1"
        android:text="@string/btn_delete"
        android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_clear"
    android:layout_column="0"
    android:layout_row="1"
    android:text="@string/btn_clear"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num1"
    android:layout_column="0"
    android:layout_row="2"
    android:text="@string/btn_num1"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num2"
    android:layout_column="1"
    android:layout_row="2"
    android:text="@string/btn_num2"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num3"
    android:layout_column="2"
    android:layout_row="2"
    android:text="@string/btn_num3"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_plus"
    android:layout_column="3"
    android:layout_row="2"
    android:text="@string/btn_plus"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num4"
    android:layout_column="0"
    android:layout_row="3"
    android:text="@string/btn_num4"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_num5"
    android:layout_column="1"
    android:layout_row="3"
    android:text="@string/btn_num5"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num6"
    android:layout_column="2"
    android:layout_row="3"
    android:text="@string/btn_num6"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_minus"
    android:layout_column="3"
    android:layout_row="3"
    android:text="@string/btn_minus"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_num7"
    android:layout_column="0"
    android:layout_row="4"
    android:text="@string/btn_num7"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num8"
    android:layout_column="1"
    android:layout_row="4"
    android:text="@string/btn_num7"
    android:textSize="26sp"/>

    <Button
    android:id="@+id/btn_num9"
    android:layout_row="4"
    android:text="@string/btn_num9"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_multi"
    android:layout_column="3"
    android:layout_row="4"
    android:text="@string/btn_multi"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_dot"
    android:layout_column="0"
    android:layout_row="5"
    android:text="@string/btn_dot"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_num0"
    android:layout_column="1"
    android:layout_row="5"
    android:text="@string/btn_num0"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_equal"
    android:layout_column="2"
    android:layout_row="5"
    android:text="@string/btn_equal"
    android:textSize="26sp" />

    <Button
    android:id="@+id/btn_div"
    android:layout_column="3"
    android:layout_row="5"
    android:text="@string/btn_div"
    android:textSize="26sp" />
</GridLayout>