<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="74dp" />

    <Button
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        />

    <Button
        android:id="@+id/btn_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sql" />
</LinearLayout>