<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMI">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/weight"
            android:layout_width="0sp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="0sp"
            android:layout_weight=".8"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/height"
            android:layout_width="0sp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight=".8" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_cale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cale" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="30sp"
        android:textAlignment="center" />
</LinearLayout>